--- a/week3/w3d1/pokemon-modal/src/Components/PokemonList/PokemonList.css
+++ b/week3/w3d1/pokemon-modal/src/Components/PokemonList/PokemonList.css
@@ -34,3 +34,22 @@
   font-size: 14px;
   color: #666;
 }
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.search-input {
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.search-input::placeholder {
+  color: #aaa;
+}
